--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -26,6 +26,12 @@
             {%if comp['numberOfPlaces']|int >0 and comp['date'] > current_datetime%}
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {%endif%}
+            {% if club['name'] in comp['investedPoints'] %}
+            <p>
+                You have: {{ comp['investedPoints'][club['name']]['places'] }} places</br>
+                Points invested: {{ comp['investedPoints'][club['name']]['points'] }}
+            </p>
+            {% endif %}
         </li>
         <hr />
         {% endfor %}
