Feature - add feature public board

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,5 +15,6 @@
         {% endif %}
         <button type="submit">Enter</button>
     </form>
+    <p><a href="/board">Public board</a></p>
 </body>
 </html>
